# aquestalkpi_ros

./: README.md
aquestalkpi_ros/: CMakeLists.txt  package.xml
aquestalkpi_ros/include/aquestalkpi_ros/: aquestalkpi.hpp  aquestalkpi_ros_component.hpp
aquestalkpi_ros/src/: aquestalkpi_ros_component.cpp
aquestalkpi_ros_msgs/: CMakeLists.txt  package.xml
aquestalkpi_ros_msgs/msg/: Talk.msg
